--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-llvmlite==0.15.0
-audioread==2.1.6
 cycler==0.10.0
-decorator==4.3.0
-joblib==0.13.1
 kiwisolver==1.0.1
-librosa==0.4.2
 matplotlib==3.0.2
 numpy==1.16.0
+pkg-resources==0.0.0
 pyalsaaudio==0.8.4
 pyparsing==2.3.1
 python-dateutil==2.7.5
+python-speech-features==0.6
 scikit-learn==0.20.2
 scipy==1.2.0
 six==1.12.0
